[package]
name = "bn"
version = "0.4.4"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "Pairing cryptography with the Barreto-Naehrig curve"
keywords = ["pairing","crypto","cryptography"]
readme = "README.md"
homepage = "https://github.com/zcash/bn"
repository = "https://github.com/zcash/bn"
license = "MIT OR Apache-2.0"

[features]
default = ["rustc-serialize"]

[[bench]]
name = "api"

[dependencies]
rand = "0.4"
rustc-serialize = { version = "0.3", optional = true }
byteorder = "1.0"

[dev-dependencies.bincode]
version = "0.6"
default-features = false
features = ["rustc-serialize"]
